--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <table cellspacing="20">
-    <td><img src="C:\Users\USER\Desktop\Web Development\HTML-Personal Site\images\1568.2.jpg" alt="pushkar patil's profile picture"></td>
+    <td><img src="images\1568.2.jpg" alt="pushkar patil's profile picture"></td>
     <td><h1>PUSHKAR PATIL</h1>
     <p><em>Founder and CEO of <strong>PATIL Industries</strong>.</em></p>
     <p>I am a student of BTech IT in <a href="http://www.dypatil.edu/engineering/index.php">Ramrao Adik Institute of Technology, Nerul.</a></p></td>
