--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 
-<body>
+<body style="background-color: blue;">
   <table cellspacing="20">
     <td><img src="images\1568.2.jpg" alt="pushkar patil's profile picture"></td>
     <td><h1>PUSHKAR PATIL</h1>
