--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>This is Pushkar's site⚡</title>
+  <style media="screen">
+    
+    img  {
+    height: 300px;
+     }
+
+    
 </head>
 
 
